<resources>
    <string name="app_name">ساعدني</string>
    <string name="title_home">إستقبال</string>
    <string name="title_read">إقرأ</string>
    <string name="title_send">أرسل</string>
    <string name="title_alarm">منبه</string>
    <string name="title_image">وصف</string>
    <string name="title_call">إتصل</string>
    <string name="bt_alarm">اضبط</string>
    <string name="hint_heure">الساعات</string>
    <string name="hint_min">الدقائق</string>
    <string name="acc">هذه التطبيقة تمكنك من الحصول على عدة خدمات صوتية (تحديد مضمون المكان المحيط بالشخص،
الاتصال بشخص، قراءة الرسائل، ارسال رسالة، تعديل المنبه و  الاستفسار عن الوقت)
        \n
        * لفتح التطبيقة صوتيا: عند فتح الشاشة و سماع الإشارة الصوتية انطق مساعدي ولايقاف خدمة الاستماع الهادفة لفتح التطبيقة انطق توقف.
        \n
                               *  لتحديد مضمون الصورة المحيطة بك انطق صورة.
        \n

                              * للاتصال بشخص انطق اتصل و لالغاء الاتصال انطق الغ.
        \n

        * لقراءة رسالة انطق اقرا و للمرور للرسالة التالية انطق التالي.
        \n
        * لضبط المنبه انطق منبه و لإلغائه انطق الغاء المنبه.
        \n
	                               * للاستفسار عن الوقت انطق وقت.

        \n
* لإغلاق التطبيقة انطق غادر.
\n
لضمان حسن سير التطبيقة:
        \n
        * عليك تفعيل الاذونات اللازمة، اثر تنصيبها مباشرة.
        \n
* عليك تقريب الهاتف من فمك و نطق الحروف جيدا لضمان التعرف على الكلمات بشكل صحيح و واضح.


 </string>
    <string name="bt_cal">إتصل</string>
    <string name="hint_call">اسم او رقم الشخص</string>
</resources>