<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
app:startDestination="@id/navigation_home"
    >





    <fragment
        android:id="@+id/navigation_alarm"
        android:name="com.example.mousa3idi.ui.AlarmFragment"
        android:label="@string/title_alarm"
        tools:layout="@layout/fragment_alarm" />

    <fragment
        android:id="@+id/navigation_read"
        android:name="com.example.mousa3idi.ui.ReadMessageFragment"
        android:label="@string/title_read"
        tools:layout="@layout/fragment_read" />
    <fragment
        android:id="@+id/navigation_send"
        android:name="com.example.mousa3idi.ui.SendMessageFragment"
        android:label="@string/title_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/navigation_image"
        android:name="com.example.mousa3idi.ui.ImageFragment"
        android:label="@string/title_image"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mousa3idi.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
</navigation>