<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AlarmFragment"
    android:orientation="vertical"

   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

    <EditText
        android:id="@+id/heure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_weight="1"
        android:hint="@string/hint_heure"
        android:inputType="numberDecimal"
        android:textColor="@color/bleu"

/>
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:textAlignment="center"
        android:layout_weight="1"
        android:textColor="@color/colorNavIcon"

       />
    <EditText
        android:id="@+id/min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/bleu"
        android:inputType="numberDecimal"
        android:layout_gravity="center_vertical"
        android:hint="@string/hint_min"
        />

</LinearLayout>
    <Button
        android:id="@+id/bt_al"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bt_alarm"
        app:icon="@android:drawable/ic_lock_idle_alarm"

        />
</LinearLayout>
